--- a/BlazorBloggingApp.WebAssembly/Layout/BlogList.razor
+++ b/BlazorBloggingApp.WebAssembly/Layout/BlogList.razor
@@ -2,19 +2,22 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">WASM Example</a>
-        <button title="Navigation menu" class="navbar-toggler">
+        <button @onclick="ToggleCollapse" title="Toggle Blog List" class="navbar-toggler">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
-<ul class="nav flex-column">
-    @foreach (var post in blogPosts)
-    {
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="@($"/post/{post.Id}")">
-                @post.Title
-            </NavLink>
-        </li>
-    }
-</ul>
+@if (!isCollapsed)
+{
+    <ul class="nav flex-column">
+        @foreach (var post in blogPosts)
+        {
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="@($"/post/{post.Id}")">
+                    @post.Title
+                </NavLink>
+            </li>
+        }
+    </ul>
+}
