--- a/BlazorBloggingApp.WebAssembly/Pages/EditPost.razor
+++ b/BlazorBloggingApp.WebAssembly/Pages/EditPost.razor
@@ -34,10 +34,24 @@
             NavigationManager.NavigateTo($"/post/{PostId}");
         }
     }
+
+    void CancelEdit()
+    {
+        NavigationManager.NavigateTo($"/post/{PostId}");
+    }
 }
 
-<EditForm Model="@this" OnValidSubmit="UpdatePost">
-    <InputText id="title" @bind-Value="Title" />
-    <InputTextArea id="content" @bind-Value="Content" />
-    <button type="submit">Update Post</button>
+<h3>Edit Post</h3>
+
+<EditForm Model="@this" OnValidSubmit="UpdatePost" class="p-4">
+    <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <InputText id="title" class="form-control" @bind-Value="Title" />
+    </div>
+    <div class="mb-3">
+        <label for="content" class="form-label">Content</label>
+        <InputTextArea id="content" class="form-control" @bind-Value="Content" style="height: 200px;" />
+    </div>
+    <button type="submit" class="btn btn-primary">Update Post</button>
+    <button class="btn btn-secondary" @onclick="CancelEdit">Cancel</button>
 </EditForm>
